# saca-bench

./: LICENSE  README.md
BPR2/: .gitignore  AUTHORS  ChangeLog  Makefile.in  Makefile.init  README  aclocal.m4  bootstrap.sh  config.status  configure  configure.in  doxyBpr.cfg  libtool
BPR2/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
BPR2/config/: kbs.m4  libtool.m4
BPR2/src/: Makefile.am  Makefile.in  config.h  config.h.in
BPR2/src/.deps/: fibstring-fib.main.Po
BPR2/src/Main/: .kdbgrc.bktref  .kdbgrc.bprtime  .kdbgrc.makeclusteredsft  .kdbgrc.periodicstr  Makefile.am  Makefile.in  bprtime.main.c  fib.main.c  periodicStrGen.main.c
BPR2/src/Main/.deps/: bprtime-bprtime.main.Po  fibstring-fib.main.Po  periodicstr-periodicStrGen.main.Po
BPR2/src/Standard/: Makefile.am  Makefile.in  kbs_Alphabet.c  kbs_Alphabet.h  kbs_Error.c  kbs_Error.h  kbs_Limits.h  kbs_Math.c  kbs_Math.h  kbs_String.c  kbs_String.h  kbs_Time.c  kbs_Time.h  kbs_Types.h
BPR2/src/Standard/.deps/: libstandard_la-kbs_Alphabet.Plo  libstandard_la-kbs_Error.Plo  libstandard_la-kbs_Math.Plo  libstandard_la-kbs_String.Plo  libstandard_la-kbs_Time.Plo
BPR2/src/SuffixArray/: Makefile.am  Makefile.in  kbs_SuffixArray.c  kbs_SuffixArray.h  kbs_SuffixArrayAnnotated.c  kbs_SuffixArrayAnnotated.h  kbs_SuffixArrayChecker.c  kbs_SuffixArrayChecker.h  kbs_SuffixArrayConstDStepAndPre.c  kbs_SuffixArrayConstDStepAndPre.h
BPR2/src/SuffixArray/.deps/: libsuffixarray_la-kbs_SuffixArray.Plo  libsuffixarray_la-kbs_SuffixArrayAnnotated.Plo  libsuffixarray_la-kbs_SuffixArrayChecker.Plo  libsuffixarray_la-kbs_SuffixArrayConstDStepAndPre.Plo
BPR2/src/Util/: Makefile.am  Makefile.in  kbs_FibonacciString.c  kbs_FibonacciString.h  kbs_RandomString.c  kbs_RandomString.h  kbs_RandomStringFile.c  kbs_RandomStringFile.h
BPR2/src/Util/.deps/: libutil_la-kbs_FibonacciString.Plo  libutil_la-kbs_RandomString.Plo  libutil_la-kbs_RandomStringFile.Plo
deep-shallow/: .gitignore  ds.c  helped.c  shallow.c  suftest2.c
gsa-is/: .gitignore  LICENSE  README.md  gsacak.c  gsacak.h  gsais.c  gsais.h  test.c
gsa-is/experiments/: Makefile  README.md  main.c
gsa-is/experiments/dataset/: input-10000.txt.bwt  proteins-10000.fasta  reads-10000.fastq
gsa-is/experiments/lib/: document_array.c  document_array.h  file.c  file.h  lcp_array.c  lcp_array.h  suffix_array.c  suffix_array.h  utils.c  utils.h
gsa-is/experiments/scripts/: downloads.txt
gsaca/: .gitignore  LICENSE  README.md  gsaca.c  gsaca.h
gsaca/benchmark/: Makefile  README
gsaca/benchmark/data/: README
gsaca/benchmark/data/largecorpus/: Makefile
gsaca/benchmark/data/pizzachilicorpus/: Makefile
gsaca/benchmark/data/repcorpus/: Makefile
gsaca/benchmark/data/silesiacorpus/: Makefile
gsaca/benchmark/dc3/: dc3.C  dc3.h
gsaca/benchmark/divsufsort/: divsufsort_private.h
gsaca/benchmark/gsaca/: gsaca.c  gsaca.h
gsaca/benchmark/ka/: BooleanString.cpp  BooleanString.h  LinearSuffixSort.cpp  LinearSuffixSort.h  Makefile  suftest.cpp
gsaca/benchmark/ka/orig/: LinearSA.tar
gsaca/benchmark/programlib/: benchmark.cpp  constructsa.cpp  corpusbenchmark.sh
msufsort/: LICENSE  SConstruct
msufsort/src/: SConscript
msufsort/src/executable/: SConscript
msufsort/src/executable/msufsort/: SConscript  main.cpp
msufsort/src/include/: endian.h
msufsort/src/include/endian/: byte_swap.h  endian.h  endian_swap.h  endian_type.h
msufsort/src/include/type_traits/: enable_if_integral.h  enable_if_integral_or_enum.h  is_endian.h  opposite_endian.h  remove_endian.h
qsufsort/: .gitignore  Makefile  suftest.c
sa-ds/: core.cpp  is.cpp  is.sln  is.vcproj  makefile  readme.txt
sa-is/: .gitignore  main.cpp
saca-k/: .gitignore  readme.txt  saca-k.cpp
